##Text encoding: utf-8

2016-02-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/table/gchemtable-app.cc: fixed typos. [#47081]
	* programs/table/gchemtable-curve.cc: ditto.
	* programs/table/gchemtable-data.cc: ditto.

2016-02-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: fixed text vertical position.

2016-02-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reactant.cc: fix reaction import from cdx format.
	* libs/gcp/reactant.h: ditto.
	* libs/gcp/text.cc: ditto.
	* plugins/loaders/cdx/cdx.cc: ditto.

2016-02-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reactant.cc: new method needed to import stoichiometry.
	* libs/gcp/reactant.h: ditto.
	* plugins/loaders/cdx/cdx.cc: detect stoichiometry coefficients in
	reactions.

2016-01-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/dialog.cc: don't throw an exception in Dialog::SetRealName().
	* programs/table/gchemtable-curve.cc: don't crash when showing an already
	existing chart. [Redhat bug #1302135]

2016-01-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: import reaction and mesomery.

2016-01-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/scheme.cc: allow missing products in reactions again.
	* plugins/loaders/cdx/cdx.cc: fix strings encoding while loading.

2016-01-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: fix scale for CDX documents.
	* libs/gcu/objprops.h: ditto.
	* plugins/loaders/cdx/cdx.cc: ditto.

2016-01-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: fixed a crasher.
	* plugins/loaders/cdx/cdx.cc: enhanced style import.
	* plugins/loaders/cdxml/cdxml.cc: fixed DTD.

2016-01-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/arrow.cc: fix position setting through GetProperty().
	* libs/gcp/fragment.cc: ditto.
	* libs/gcu/document.cc: fixed an uninitialized member condition.